; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ks8842.c_ks8842_dma_tx_cb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ks8842.c_ks8842_dma_tx_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.ks8842_adapter = type { %struct.ks8842_tx_dma_ctl }
%struct.ks8842_tx_dma_ctl = type { i32* }

@.str = private unnamed_addr constant [17 x i8] c"TX DMA finished\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ks8842_dma_tx_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ks8842_dma_tx_cb(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.ks8842_adapter*, align 8
  %5 = alloca %struct.ks8842_tx_dma_ctl*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.net_device*
  store %struct.net_device* %7, %struct.net_device** %3, align 8
  %8 = load %struct.net_device*, %struct.net_device** %3, align 8
  %9 = call %struct.ks8842_adapter* @netdev_priv(%struct.net_device* %8)
  store %struct.ks8842_adapter* %9, %struct.ks8842_adapter** %4, align 8
  %10 = load %struct.ks8842_adapter*, %struct.ks8842_adapter** %4, align 8
  %11 = getelementptr inbounds %struct.ks8842_adapter, %struct.ks8842_adapter* %10, i32 0, i32 0
  store %struct.ks8842_tx_dma_ctl* %11, %struct.ks8842_tx_dma_ctl** %5, align 8
  %12 = load %struct.net_device*, %struct.net_device** %3, align 8
  %13 = call i32 @netdev_dbg(%struct.net_device* %12, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %14 = load %struct.ks8842_tx_dma_ctl*, %struct.ks8842_tx_dma_ctl** %5, align 8
  %15 = getelementptr inbounds %struct.ks8842_tx_dma_ctl, %struct.ks8842_tx_dma_ctl* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %1
  br label %33

19:                                               ; preds = %1
  %20 = load %struct.net_device*, %struct.net_device** %3, align 8
  %21 = getelementptr inbounds %struct.net_device, %struct.net_device* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %22, align 4
  %25 = load %struct.ks8842_tx_dma_ctl*, %struct.ks8842_tx_dma_ctl** %5, align 8
  %26 = getelementptr inbounds %struct.ks8842_tx_dma_ctl, %struct.ks8842_tx_dma_ctl* %25, i32 0, i32 0
  store i32* null, i32** %26, align 8
  %27 = load %struct.net_device*, %struct.net_device** %3, align 8
  %28 = call i64 @netif_queue_stopped(%struct.net_device* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %19
  %31 = load %struct.net_device*, %struct.net_device** %3, align 8
  %32 = call i32 @netif_wake_queue(%struct.net_device* %31)
  br label %33

33:                                               ; preds = %18, %30, %19
  ret void
}

declare dso_local %struct.ks8842_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @netdev_dbg(%struct.net_device*, i8*) #1

declare dso_local i64 @netif_queue_stopped(%struct.net_device*) #1

declare dso_local i32 @netif_wake_queue(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
